tag02 refactoring in HA